[package]
name = "aise"
version = "2.36.5"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[lib]
name = "aise"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
bincode = "1.0"
bitflags = "1.0"
bumpalo = { version = "3.7", features = ["collections"] }
byteorder = "1.1"
chrono = "0.4"
directories = "2.0"
fern = "=0.5.8"
fxhash = "0.2.1"
lazy_static = "1.0"
libc = "0.2"
log = "0.4"
once_cell = "1.12"
parking_lot = "0.12"
rand = "0.6"
scopeguard = "1.0"
serde = { version = "1.0.104", features = ["rc", "derive"] }
smallvec = "1.0"
thread_local = "1.1"

cgmath = { version = "0.17", optional = true }
euclid = { version = "0.20", optional = true }
font-kit = { version = "0.5", optional = true }
glium = { version = "0.25", optional = true, default-features = false }
gl = { version = "0.14", optional = true }

[dependencies.rand_xorshift]
version = "0.1"
features = ["serde1"]

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "winuser", "wingdi"]

[dependencies.bw_dat]
path = "bw_dat"
features = ["serde"]

[target.'cfg(target_arch = "x86")'.dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "e8e847864c2938735040ca3c68ef1cf9e03b692f"

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "4286c88cef7079aebb4046cf7194e1afe1ff22bd"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "4286c88cef7079aebb4046cf7194e1afe1ff22bd"

[features]
opengl = ["cgmath", "euclid", "font-kit", "glium", "gl"]
