[package]
name = "aise"
version = "2.38.5"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[lib]
name = "aise"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
bincode = "1.0"
bitflags = "1.0"
bumpalo = { version = "3.7", features = ["collections"] }
byteorder = "1.1"
directories = "4.0"
fern = "0.6"
fxhash = "0.2.1"
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_warn"] }
once_cell = "1.12"
parking_lot = "0.12"
rand = { version = "0.8", default-features = false }
rand_xoshiro = { version = "0.6", features = ["serde1"] }
scopeguard = "1.0"
serde = { version = "1.0.104", features = ["rc", "derive"] }
smallvec = "1.0"

cgmath = { version = "0.17", optional = true }
euclid = { version = "0.20", optional = true }
font-kit = { version = "0.5", optional = true }
glium = { version = "0.25", optional = true, default-features = false }
gl = { version = "0.14", optional = true }

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "sysinfoapi", "winuser", "wingdi"]

[dependencies.bw_dat]
path = "bw_dat"
features = ["serde"]

[target.'cfg(target_arch = "x86")'.dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "ccd95f5cfa37622bc3ec3d4b0974ab9b631b59b2"

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "f952146e7cb657449765cc15af96a9ba0100af20"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "f952146e7cb657449765cc15af96a9ba0100af20"

[features]
opengl = ["cgmath", "euclid", "font-kit", "glium", "gl"]
