[package]
name = "aise"
version = "2.41.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[lib]
name = "aise"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = "s"
debug = true
panic = "abort"
overflow-checks = true
lto = true

[dependencies]
bincode = "1.0"
bitflags = { version = "2.0", features = ["serde"] }
bumpalo = { version = "3.7", features = ["collections"] }
byteorder = "1.1"
directories = "5.0"
fern = "0.6"
hashbrown = { version = "0.14", features = ["serde"], default-features = false }
libc = "0.2"
log = { version = "0.4", features = ["release_max_level_warn"] }
once_cell = "1.12"
parking_lot = "0.12"
rand = { version = "0.8", default-features = false }
rand_xoshiro = { version = "0.6", features = ["serde1"] }
rustc-hash = "2.0"
scopeguard = "1.0"
serde = { version = "1.0.104", features = ["rc", "derive"] }
smallvec = "1.0"

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "libloaderapi", "processthreadsapi", "sysinfoapi", "winuser", "wingdi"]

[dependencies.bw_dat]
path = "bw_dat"
features = ["serde"]

[target.'cfg(target_arch = "x86")'.dependencies.whack]
git = "https://github.com/neivv/whack/"
rev = "2d1adbae09d75bdaa2af65b0af12760740cd3d2b"

[target.'cfg(target_arch = "x86")'.dependencies.samase_shim]
git = "https://github.com/neivv/samase_plugin"
rev = "2da5d00fcde9ca1fd7755b9eada1c91b490c1de9"

[dependencies.samase_plugin]
git = "https://github.com/neivv/samase_plugin"
rev = "2da5d00fcde9ca1fd7755b9eada1c91b490c1de9"
