[package]
name = "bw_dat"
version = "0.1.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.0"
byteorder = "1.2"
fxhash = "0.2"
libc = "0.2"
once_cell = "1.7"
serde = "1.0.27"
serde_derive = "1.0.27"

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "sysinfoapi"]
