[package]
name = "bw_dat"
version = "0.1.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "2.0"
fxhash = "0.2"
libc = "0.2"
once_cell = "1.7"
serde = { version = "1.0.124", optional = true, features = ["derive"] }

[features]
default = []
scr-only = []

[dependencies.winapi]
version = "0.3.3"
features = ["heapapi", "sysinfoapi"]
