[package]
name = "bw_dat"
version = "0.1.0"
authors = ["Markus Heikkinen <ittevien@gmail.com>"]
edition = "2024"

[dependencies]
bitflags = "2.0"
fxhash = "0.2"
once_cell = "1.7"
serde = { version = "1.0.124", optional = true, features = ["derive"] }

[features]
default = []
scr-only = []

[dependencies.windows-sys]
version = "0.60"
features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
]
